# pumptools

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.build  Dockerfile.test  Makefile  Package.mk  README.md  nx2-worldmax-unlocks.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-master.yaml  build-tag.yaml  build.yaml
.gitlab/issue_templates/: Bug.md
cmake/: CMakeLists.txt
cmake/modules/: AddResources.cmake
cmake/src/: CMakeLists.txt
cmake/src/imports/: CMakeLists.txt
cmake/src/imports/cmocka/: CMakeLists.txt
cmake/src/main/: CMakeLists.txt
cmake/src/main/asset/: CMakeLists.txt
cmake/src/main/asset/f2/: CMakeLists.txt
cmake/src/main/asset/f2/lib/: CMakeLists.txt
cmake/src/main/asset/fex/lib/: CMakeLists.txt
cmake/src/main/asset/fex/tool/usb-profile/: CMakeLists.txt
cmake/src/main/asset/nx/: CMakeLists.txt
cmake/src/main/asset/nx/lib/: CMakeLists.txt
cmake/src/main/asset/nx/tool/settings/: CMakeLists.txt
cmake/src/main/asset/nx2/lib/: CMakeLists.txt
cmake/src/main/asset/nx2/tool/usb-profile/: CMakeLists.txt
cmake/src/main/asset/nxa/lib/: CMakeLists.txt
cmake/src/main/asset/nxa/tool/: CMakeLists.txt
cmake/src/main/asset/nxa/tool/usb-profile/: CMakeLists.txt
cmake/src/main/asset/x2/lib/: CMakeLists.txt
cmake/src/main/asset/zero/lib/: CMakeLists.txt
cmake/src/main/capnhook/: CMakeLists.txt
cmake/src/main/capnhook/hook/: CMakeLists.txt
cmake/src/main/capnhook/hooklib/: CMakeLists.txt
cmake/src/main/crypt/: CMakeLists.txt
cmake/src/main/hook/: CMakeLists.txt
cmake/src/main/hook/core/: CMakeLists.txt
cmake/src/main/hook/exc/: CMakeLists.txt
cmake/src/main/hook/f2/: CMakeLists.txt
cmake/src/main/hook/fex/: CMakeLists.txt
cmake/src/main/hook/fst/: CMakeLists.txt
cmake/src/main/hook/mk3/: CMakeLists.txt
cmake/src/main/hook/nx/: CMakeLists.txt
cmake/src/main/hook/nx2/: CMakeLists.txt
cmake/src/main/hook/nxa/: CMakeLists.txt
cmake/src/main/hook/patch/: CMakeLists.txt
cmake/src/main/hook/pri/: CMakeLists.txt
cmake/src/main/hook/pro/: CMakeLists.txt
cmake/src/main/hook/pro2/: CMakeLists.txt
cmake/src/main/hook/propatch/: CMakeLists.txt
cmake/src/main/hook/x2/: CMakeLists.txt
cmake/src/main/hook/zero/: CMakeLists.txt
cmake/src/main/io/: CMakeLists.txt
cmake/src/main/io/lxio/: CMakeLists.txt
cmake/src/main/io/piubtn/: CMakeLists.txt
cmake/src/main/io/piuio/: CMakeLists.txt
cmake/src/main/io/util/: CMakeLists.txt
cmake/src/main/ptapi/: CMakeLists.txt
cmake/src/main/ptapi/piubtn/: CMakeLists.txt
cmake/src/main/ptapi/piubtn/joystick/: CMakeLists.txt
cmake/src/main/ptapi/piubtn/joystick-conf/: CMakeLists.txt
cmake/src/main/ptapi/piubtn/joystick-util/: CMakeLists.txt
cmake/src/main/ptapi/piubtn/keyboard/: CMakeLists.txt
cmake/src/main/ptapi/piubtn/keyboard-conf/: CMakeLists.txt
cmake/src/main/ptapi/piubtn/keyboard-util/: CMakeLists.txt
cmake/src/main/ptapi/piubtn/null/: CMakeLists.txt
cmake/src/main/ptapi/piubtn/real/: CMakeLists.txt
cmake/src/main/ptapi/piubtn/test/: CMakeLists.txt
cmake/src/main/ptapi/piubtn/util/: CMakeLists.txt
cmake/src/main/ptapi/piuio/: CMakeLists.txt
cmake/src/main/ptapi/piuio/joystick/: CMakeLists.txt
cmake/src/main/ptapi/piuio/joystick-conf/: CMakeLists.txt
cmake/src/main/ptapi/piuio/joystick-util/: CMakeLists.txt
cmake/src/main/ptapi/piuio/keyboard/: CMakeLists.txt
cmake/src/main/ptapi/piuio/keyboard-conf/: CMakeLists.txt
cmake/src/main/ptapi/piuio/keyboard-util/: CMakeLists.txt
cmake/src/main/ptapi/piuio/lxio/: CMakeLists.txt
cmake/src/main/ptapi/piuio/null/: CMakeLists.txt
cmake/src/main/ptapi/piuio/real/: CMakeLists.txt
cmake/src/main/ptapi/piuio/test/: CMakeLists.txt
cmake/src/main/ptapi/piuio/util/: CMakeLists.txt
cmake/src/main/pumpnet/: CMakeLists.txt
cmake/src/main/pumpnet/client/: CMakeLists.txt
cmake/src/main/pumpnet/lib/: CMakeLists.txt
cmake/src/main/pumpnet/prinet-proxy/: CMakeLists.txt
cmake/src/main/sec/: CMakeLists.txt
cmake/src/main/sec/hasp/: CMakeLists.txt
cmake/src/main/sec/hasp/lib/: CMakeLists.txt
cmake/src/main/sec/hasp/old/: CMakeLists.txt
cmake/src/main/sec/hasp/server/: CMakeLists.txt
cmake/src/main/sec/lockchip/: CMakeLists.txt
cmake/src/main/sec/microdog34/: CMakeLists.txt
cmake/src/main/sec/microdog40/: CMakeLists.txt
cmake/src/main/sec/microdog40d/: CMakeLists.txt
cmake/src/main/sec/prinet/: CMakeLists.txt
cmake/src/main/util/: CMakeLists.txt
cmake/src/test/: CMakeLists.txt
cmake/src/test/capnhook/: CMakeLists.txt
cmake/src/test/capnhook/hook/lib/: CMakeLists.txt
cmake/src/test/hook/: CMakeLists.txt
cmake/src/test/hook/propatch/: CMakeLists.txt
cmake/src/test/hook/propatch/usb-fix/: CMakeLists.txt
cmake/src/test/sec/prinet/: CMakeLists.txt
cmake/src/test/sec/prinet/prinet/: CMakeLists.txt
cmake/src/test/test-util/: CMakeLists.txt
cmake/src/test/util/: CMakeLists.txt
cmake/src/test/util/base64/: CMakeLists.txt
cmake/src/test/util/mem/: CMakeLists.txt
cmake/src/test/util/str/: CMakeLists.txt
doc/: README.md
doc/api/: api.md
doc/api/io/: piubtn.md  piuio.md  x11-input-hook.md
doc/development/: architecture.md  development.md
doc/development/arch/: usb-device-hooking-and-emulation.md
doc/development/images/: architecture.dia
doc/development/notes/: exc-sound-manager-notes.md  (+7 more)
doc/game/: 01-1st.md  02-2nd.md  03-3rd.md  04-3se.md  05-tc.md  06-pc.md  07-extra.md  08-prem1.md  09-prex1.md  10-reb.md  11-prem2.md  12-prex2.md  13-prem3.md  14-prex3.md  15-exc.md  16-exc2.md  17-zero.md  18-nx.md  19-pro.md  20-nx2.md  21-nxa.md  22-pro2.md  game.md
doc/game_old/: NX Absolute Guide v1.0.xls
doc/hardware/: README.md
doc/hook/: exchook.md  f2hook.md  fexhook.md  fsthook.md  hook.md  mk3hook.md  nx2hook.md  nxahook.md  nxhook.md  os.md  prihook.md  pro2hook.md  prohook.md  x2hook.md  zerohook.md
scripts/: run-tests.sh
utils/: files-lowercase.sh
(+394 files in other folders)
