add_subdirectory(core)
add_subdirectory(exc)
add_subdirectory(f2)
add_subdirectory(fex)
add_subdirectory(fst)
add_subdirectory(mk3)
add_subdirectory(nx2)
add_subdirectory(nxa)
add_subdirectory(nx)
add_subdirectory(patch)
add_subdirectory(pri)
add_subdirectory(pro2)
add_subdirectory(propatch)
add_subdirectory(pro)
add_subdirectory(x2)
add_subdirectory(zero)